# indice_nexus

./: .gitignore  README.md  pyproject.toml  requirements.txt  sortie.txt  stock_indicators.py
.github/workflows/: ci.yml
scripts/: __init__.py  nexus_daily.ps1  nexus_daily.py  report_daily.ps1
src/stock_analysis/: __init__.py  __main__.py  analyzer.py  api.py  cache.py  data.py  features.py  io.py  ml_pipeline.py  regimes.py  report.py  report_nexus.py  report_orotitan.py  scheduler.py  scoring.py  streamlit_app.py  weighting.py
src/stock_analysis/api/: __init__.py  app.py
stock_analysis/: __init__.py  __main__.py  analyzer.py  backtest.py  bt_report.py  data.py  fundamentals.py  indicators.py  io.py  plot.py  plot_bt.py  report.py  scoring.py
streamlit_pages/: 10_OroTitan_AI.py  11_OroTitan_Behavior.py
templates/: report.md.j2  report_orotitan.md.j2
tests/: __init__.py  fastapi_stub.py  pandas_stub.py  pydantic_stub.py  streamlit_stub.py  test_api.py  test_backtest.py  test_bt_report.py  test_cli.py  test_data.py  test_features.py  test_fundamentals.py  test_indicators.py  test_indicators_rsi_macd.py  test_io.py  test_ml_pipeline.py  test_quality.py  test_regimes.py  test_report.py  test_report_nexus.py  test_scheduler.py  test_scoring.py  test_streamlit.py  test_weighting.py  yfinance_stub.py
tests/ai/: test_api_contract.py  test_cli_orotitan_ai.py  test_decide_smoke.py  test_report_render.py
tests/behavior/: test_behavior_api.py  test_behavior_cli.py  test_behavior_report.py  test_behavior_rules.py  test_behavior_scoring.py
(+15 files in other folders)
