[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analysis-nexus"
version = "0.1.0"
description = "Modular toolkit for European equity analysis, scoring, reporting, and backtesting."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Indice Nexus"},
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "yfinance>=0.2",
    "pyarrow>=10",
    "apscheduler>=3.10",
    "matplotlib>=3.6",
    "markdown>=3.4",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.5", "xgboost>=2.1"]
dashboard = ["streamlit>=1.40", "plotly>=5.24"]
api = ["fastapi>=0.115", "uvicorn>=0.32"]
backtest = ["apscheduler>=3.10", "matplotlib>=3.6"]
orotitan = ["sentence-transformers>=2.7.0; python_version >= '3.9'"]

[project.scripts]
stock-analysis = "stock_analysis.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

